# $Id$

2007-02-22	Konstantin V. Arkhipov

	* main/DAOs/GenericDAO.class.php: field collisions in inherited
	classes fixed.

2007-02-20	Dmitry E. Demidov

	* main/Containers/Unified/UnifiedContainer.class.php: sync list with
	clones after container save.

2007-02-19	Konstantin V. Arkhipov

	* main/Containers/Unified/UnifiedContainer.class.php: unsaved objects
	are not tracked by importList() now.

2007-02-16	Dmitry E. Demidov

	* core/Form/Primitives/PrimitiveInteger.class.php,
	meta/types/IntegerType.class.php,
	meta/types/SmallIntegerType.class.php: backport max/min constants from
	trunk.

2007-02-13	Konstantin V. Arkhipov

	* 0.8.5 released.

2007-02-13	Anton E. Lebedevich

	* main/Flow/PrototypedEditor.class.php,
	main/Flow/MethodMappedController.class.php: one more editor.

2007-02-10	Dmitry E. Demidov

	* core/Form/Primitives/ExplodedPrimitive.class.php: added support for
	regexp separator.

2007-02-09	Konstantin V. Arkhipov

	* main/Utils/ClassUtils.class.php: return value are omitted now for
	all methods.

	* main/Flow/: MonolithicEditor backported from trunk; also fixed
	SaveCommand logic.

2007-02-09	Dmitry E. Demidov

	* core/Form/Primitives/PrimitiveImage.class.php: fix return value.

2007-02-07	Denis M. Gabaidulin

	* core/OSQL/SelectQuery.class.php: having clause support was added.

2007-02-06	Denis M. Gabaidulin

	* core/Form/Primitives/PrimitiveIdentifierList.class.php: list of
	identificable objects primitive was added.

2007-02-02	Konstantin V. Arkhipov

	* meta/builders/ProtoClassBuilder.class.php: min/max values
	added to identifier's too.

2007-01-31	Dmitry E. Demidov

	* main/Utils/ClassUtils.class.php: added class for copy 
	object properties.

2007-01-31	Konstantin V. Arkhipov

	* meta/types/: min/max values for SmallInteger/Integer primitives.

2007-01-29	Dmitry E. Demidov

	* main/Utils/RussianTextUtils.class.php: added method getDateAsText.

2007-01-25	Dmitry E. Demidov
